[package]
name = "libp2p-transport-veilid"
edition = "2021"
rust-version = "1.56.1"
description = "Veilid transport protocol for libp2p"
version = "0.1.0"
authors = ["None"]
license = "MIT"
repository = "libp2p-transport-veilid"
keywords = ["peer-to-peer", "libp2p", "networking", "veilid"]
categories = ["network-programming", "asynchronous"]

[dependencies]
futures = "0.3.8"
futures-timer = "3.0"
libp2p-core = { version = "0.33.0", path = "../libp2p-0.45.1/core", default-features = false  }
log = "0.4.11"
tokio-crate = { package = "tokio", version = "1.0.1", default-features = false, features = ["net"], optional = true }
veilid-core = { path = "../veilid-core" }
toml = "0.5"
lazy_static = "1.4"
anyhow = "1.0.75"
serde_json = "1.0"

[features]
default = ["tokio"]
tokio = ["tokio-crate"]

[dev-dependencies]
tokio-crate = { package = "tokio", version = "1.0.1", default-features = false, features = ["net", "rt"] }
env_logger = "0.9.0"
