[package]
name = "libp2p-transport-veilid"
edition = "2021"
rust-version = "1.56.1"
description = "Veilid transport protocol for libp2p"
version = "0.4.1"
authors = ["None"]
license = "MIT"
repository = "libp2p-transport-veilid"
keywords = ["peer-to-peer", "libp2p", "networking", "veilid"]
categories = ["network-programming", "asynchronous"]

[dependencies]
anyhow = "1.0.75"
chrono = {version = "0.4.19", features = ["serde"] }
futures = "0.3.8"
futures-timer = "3.0"
libp2p = { version = "0.56.0" }
lazy_static = "1.4"
log = "0.4.11"
prost = "0.10"
prost-types = "0.10"
rand = "0.8"
serde_json = "1.0"
tokio-crate = { package = "tokio", version = "1.33.0", default-features = false, features = ["net"], optional = true }
toml = "0.5"
veilid-core = { version = "0.4.8" }
wasm-timer = "0.2.5"

[features]
default = ["tokio"]
tokio = ["tokio-crate"]

[dev-dependencies]
tokio-crate = { package = "tokio", version = "1.33.0", default-features = false, features = ["net", "rt"] }
env_logger = "0.9.0"

[build-dependencies]
prost-build = "0.10"

